# NuePiXSecAnalysis

./: .gitignore  CMakeLists.txt  Makefile
bdt_training/: BDTTrainingElectronPhoton.ipynb  BDTTrainingElectronPhoton_FHC.ipynb  BDTTrainingElectronPhoton_RHC.ipynb  BDTTrainingPionProton.ipynb  BDTTrainingPionProton_FHC.ipynb  BDTTrainingPionProton_RHC.ipynb
bdts/: bdt_electronPhoton.json  bdt_electronPhotonSeparation.model  bdt_electronPhotonSeparation_withNue.json  bdt_electronPhotonSeparation_withNue.model  bdt_electronPhoton_Combined.json  bdt_electronPhoton_FHC_Aug10.json  bdt_electronPhoton_FHC_Jul13.json  bdt_electronPhoton_FHC_Nov2023.json  bdt_electronPhoton_RHC_Aug17.json  bdt_electronPhoton_RHC_Feb2024.json  bdt_electronPhoton_RHC_Nov2023.json  bdt_pionProton.model  bdt_pionProtonAlternate.json  bdt_pionProtonAlternate.model  bdt_pionProton_Combined.json  bdt_pionProton_FHC_Aug10.json  bdt_pionProton_FHC_Jul13.json  bdt_pionProton_FHC_Nov2023.json  bdt_pionProton_RHC_Aug17.json  bdt_pionProton_RHC_Jul13.json  bdt_pionProton_RHC_Nov2023.json
include/: BDTTool.h  CreateTrainingTree.h  EventContainer.h  LinkDef.h  Selection.h  SelectionDriver.h  StackedHistTool.h  Utility.h
scripts/: addfakeweights.sh  files_to_add_fakeweights.txt  files_to_process.txt  files_to_process_fhc.txt  files_to_process_fhc_nue_detvar.txt  files_to_process_fhc_nue_detvars.txt  files_to_process_open_trigger.txt  files_to_process_rhc.txt  files_to_process_rhc_nue_detvars.txt  files_to_process_test.txt  reprocess.sh
src/: AnalyseNue.cxx  BDTTool.cxx  CreateTrainingTree.cxx  Selection.h  (+11 more)
